--- a/ecommerce/core/templates/core/login.html
+++ b/ecommerce/core/templates/core/login.html
@@ -3,10 +3,12 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
+    <div class="container text-center " style="height: 700px;">
+        <div class="row  align-items-center" style="height: 700px;">
             <form action="" method="post">
-
+                {% csrf_token %}
+                {{form.as_p}}
+                <button class="btn btn-primary" type="submit">Login Up</button>
             </form>
         </div>
     </div>
