--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Blog</a>
+    <a class="navbar-brand" href="#">Ecommerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,7 +10,7 @@
         <a class="nav-link" href="{% url 'home' %}">My Posts</a>
         <a class="nav-link" href="{% url 'home' %}">New Post</a>
         <a class="nav-link" href="{% url 'home' %}">Profile</a>
-        <a class="nav-link" href="{% url 'home' %}">Logout</a>
+        <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a>
       </div>
     </div>
   </div>
