--- a/ecommerce/core/templates/core/signup.html
+++ b/ecommerce/core/templates/core/signup.html
@@ -3,13 +3,18 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block body %}
-    <div class="container text-center " style="height: 700px;">
-        <div class="row  align-items-center" style="height: 700px;">
+    <div class="container text-center d-flex justify-content-center align-items-center min-vh-100">    
             <form action="" method="post">
                 {% csrf_token %}
+                {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-primary">
+                        {{message}}
+                    </div>
+                {% endfor %}
+                {% endif %}
                 {{form.as_p}}
                 <button class="btn btn-primary" type="submit">Sign Up</button>
             </form>
-        </div>
     </div>
 {% endblock %}
