--- a/ecommerce/core/templates/core/signup.html
+++ b/ecommerce/core/templates/core/signup.html
@@ -3,7 +3,7 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block body %}
-    <div class="container text-center d-flex justify-content-center align-items-center min-vh-100">    
+    <div class="container text-start d-flex justify-content-center align-items-center min-vh-100">    
             <form action="" method="post">
                 {% csrf_token %}
                 {% if messages %}
