--- a/ecommerce/core/templates/core/add_product.html
+++ b/ecommerce/core/templates/core/add_product.html
@@ -4,16 +4,20 @@
 
 {% block body %}
 {% include "navbar.html" %}
-<h2>Add Product</h2>
-<div class="container">
-    <form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p}}
-    {{formset.management_form}}
-    {% for f in formset %}
-        {{f.as_p}}
-    {% endfor %}
-    <button type="submit">ADD</button>
-</form>
+<div class="container my-3">
+    <h2>Add Product</h2>
+    <div class="row justify-content-center">
+        <div class="col">
+            <form action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p}}
+                {{formset.management_form}}
+                {% for f in formset %}
+                    {{f.as_p}}
+                {% endfor %}
+                <button class="btn btn-primary" type="submit">ADD</button>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
