Add temporary links to navbar.

--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-        <a class="nav-link" href="{% url 'home' %}">My Posts</a>
-        <a class="nav-link" href="{% url 'home' %}">New Post</a>
+        <a class="nav-link" href="{% url 'home' %}">None</a>
+        <a class="nav-link" href="{% url 'add_product' %}">[Temp] Add Product</a>
         <a class="nav-link" href="{% url 'home' %}">Profile</a>
         <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a>
       </div>
