--- a/ecommerce/core/templates/core/home.html
+++ b/ecommerce/core/templates/core/home.html
@@ -4,12 +4,12 @@
 
 {% block body %}
 {% include "navbar.html" %}
-<div class="container mt-5">
-    <div class="row">
+<div class="container mt-4">
+    <div class="row gy-3">
         {% for product in products %}
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="{{product.images.first.image.url}}" class="card-img-top" alt="...">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="card product-card">
+                    <img src="{{product.images.first.image.url}}" class="card-img-top product-card-image" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">{{product.name}}</h5>
                     <p class="card-text">Rs : {{product.price}}</p>
