--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+ <nav class="navbar navbar-expand-lg sticky-top navbar-main">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Ecommerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
         <a class="nav-link" href="{% url 'home' %}">None</a>
         <a class="nav-link" href="{% url 'add_product' %}">[Temp] Add Product</a>
         <a class="nav-link" href="{% url 'home' %}">Profile</a>
