--- a/ecommerce/core/templates/core/home.html
+++ b/ecommerce/core/templates/core/home.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                     <h5 class="card-title">{{product.name}}</h5>
                     <p class="card-text">Rs : {{product.price}}</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="{% url 'product_page' product.pk %}" class="btn btn-primary">View</a>
                 </div>
                 </div>
             </div>
