--- a/ecommerce/static/css/style.css
+++ b/ecommerce/static/css/style.css
@@ -21,3 +21,13 @@
 .body-main{
     background-color: rgb(240, 240, 240);
 }
+
+.product-carousel{
+    height: 500px;
+}
+
+.product-carousel img{
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
