--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -7,9 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
-        <a class="nav-link" href="{% url 'home' %}">None</a>
+        <a class="nav-link" href="{% url 'home' %}">My Cart <i class="bi bi-cart"></i></a>
         <a class="nav-link" href="{% url 'add_product' %}">[Temp] Add Product</a>
-        <a class="nav-link" href="{% url 'home' %}">Profile</a>
+        <a class="nav-link" href="{% url 'home' %}">Profile <i class="bi bi-person-fill"></i></a>
         <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a>
       </div>
     </div>
