--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -9,8 +9,8 @@
         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
         <a class="nav-link" href="{% url 'home' %}">My Cart <i class="bi bi-cart"></i></a>
         <a class="nav-link" href="{% url 'add_product' %}">[Temp] Add Product</a>
-        <a class="nav-link" href="{% url 'home' %}">Profile <i class="bi bi-person-fill"></i></a>
-        <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a>
+        <a class="nav-link" href="{% url 'profile' %}">Profile <i class="bi bi-person-fill"></i></a>
+        <!-- <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a> -->
       </div>
     </div>
   </div>
