--- a/ecommerce/core/templates/core/product_page.html
+++ b/ecommerce/core/templates/core/product_page.html
@@ -31,6 +31,7 @@
             <h1 class="fw-bold">{{product.name}}</h1>
             <h4>{{product.info}}</h4>
             <h4>Rs : {{product.price}}</h4>
+            <a href="{% url 'add_to_cart' product.pk %}" class="btn btn-primary"><i class="bi bi-bag-plus-fill"></i></a>
         </div>
     </div>
     <hr class="mb-5">
