--- a/ecommerce/core/templates/core/cart.html
+++ b/ecommerce/core/templates/core/cart.html
@@ -20,7 +20,9 @@
                 </div> </div> 
             </div>
                 {% empty %}
-                empty
+                <div class="alert alert-info fw-bold w-50">
+                    You cart is empty.
+                </div>
                 {% endfor %}
         </div>
         <div class="row justify-content-center mb-3">
