--- a/ecommerce/core/templates/core/login.html
+++ b/ecommerce/core/templates/core/login.html
@@ -9,7 +9,8 @@
                 <form action="" method="post">
                     {% csrf_token %}
                     {{form.as_p}}
-                    <button class="btn btn-primary w-100" type="submit">Login</button>
+                    <button class="btn btn-primary w-100 mb-3" type="submit">Login</button>
+                    <a href="{% url 'customer_signup'  %}" >Don't have an account?</a>
                 </form>
             </div>
         </div>
