--- a/ecommerce/core/templates/core/cart.html
+++ b/ecommerce/core/templates/core/cart.html
@@ -8,7 +8,7 @@
         <h1 class="mb-5">Cart</h1>
         <div class="row gy-3 text-center justify-content-center mb-3">
             {% for item in cart.items.all %}
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                 <div class="card">
                     <img src="{{item.product.images.first.image.url}}" class="card-img-top product-card-image" alt="...">
                     <div class="card-body">
@@ -16,7 +16,7 @@
                     <p class="card-text">Rs : {{item.product.price}}</p>
                     <p class="card-text">Qty : {{item.quantity}}</p>
                     <a href="{% url 'product_page' item.product.pk %}" class="btn btn-primary">View</a>
-                    <!-- <a href="{% url 'product_page' item.product.pk %}" class="btn btn-primary"><i class="bi bi-bag-plus-fill"></i></a> -->
+                    <a href="{% url 'remove' item.pk %}" class="btn btn-danger">Remove</a>
                 </div> </div> 
             </div>
                 {% empty %}
