Changed Checkout implementation. Add functions in models to calculate prices.

--- a/ecommerce/core/templates/core/checkout.html
+++ b/ecommerce/core/templates/core/checkout.html
@@ -6,12 +6,12 @@
 {% include "navbar.html" %}
     <div class="container text-center mt-5">
         <h1 class="mb-5">Complete Purchase</h1>
-        {% for item in cart_items %}
+        {% for item in cart.items.all %}
         <div class="row justify-content-center">
             <div class="col-6">
                 <ul class="list-group mb-1">
-                    <li class="list-group-item">Product : {{item.name}}</li>
-                    <li class="list-group-item">Quantity : {{item.qty}} Total : {{item.total}}</li>
+                    <li class="list-group-item">Product : {{item.product.name}}</li>
+                    <li class="list-group-item">Quantity : {{item.quantity}} Total : {{item.total_price}}</li>
                 </ul>
             </div>
         </div>
@@ -21,7 +21,7 @@
         <div class="row justify-content-center">
             <div class="col-6">
                 <ul class="list-group mb-3">
-                    <li class="list-group-item fw-bold">Grand Total : Rs {{grand_total}}</li>
+                    <li class="list-group-item fw-bold">Grand Total : Rs {{cart.cart_total}}</li>
                 </ul>
                 <a href="{% url 'checkout'  %}" class="btn btn-warning">Place Order</a>
             </div>
