Add separate home page, navbar and product page for staff users.

--- a/ecommerce/core/templates/core/add_product.html
+++ b/ecommerce/core/templates/core/add_product.html
@@ -3,7 +3,7 @@
 {% block title %}Add Product{% endblock %}
 
 {% block body %}
-{% include "navbar.html" %}
+{% include "staff_navbar.html" %}
 <div class="container my-3">
     <h2>Add Product</h2>
     <div class="row justify-content-center">
