--- a/ecommerce/templates/staff_navbar.html
+++ b/ecommerce/templates/staff_navbar.html
@@ -6,10 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
-        <a class="nav-link" href="{% url 'cart' %}">My Cart <i class="bi bi-cart"></i></a>
-        <a class="nav-link" href="{% url 'profile' %}">Profile <i class="bi bi-person-fill"></i></a>
-        <!-- <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a> -->
+        <a class="nav-link" aria-current="page" href="{% url 'staff_home' %}">Home</a>
+        <a class="nav-link" href="{% url 'add_product' %}">Add Product</a>
+        <a class="nav-link" href="{% url 'customer_logout' %}">Logout</a>
       </div>
     </div>
   </div>
